src/styles/sharedComponents.scss
@import 'typography';
@import 'animations';


.dark, .light {
    transition: all .6s cubic-bezier(0.445, 0.05, 0.55, 0.95);
}

.dark {
    background-color: black;
    color: $primaryFont;
}

.light {
    background-color: $primaryFont;
}

a{
    font-size: 1.2rem;
    font-weight: bold;
    font-style: italic;
    color: $secondaryFont;
    &:focus {
        outline: none;
        border: thin solid $primaryFont;
    }
}

.btn {
    background-color: transparent;
    outline: none;
    border: none;
    cursor: pointer;

    :focus {
        outline: none;
    }
}

.container {
    width: 90%;
    margin: auto;
}

.section-header {
    height: 95vh;
    overflow: hidden;

    .section-img {
        animation: fade 2s ease forwards;
    }

    .page-description {
        display: flex;
        flex-direction: column;
        justify-content: center;
        animation: vertical-slide 2s  ease forwards;

        .page-title {
            text-align: center;
            color: $secondaryFont;
            font-family: $Satisfy;
            margin-bottom: 2rem;
        }

        .section-description {
            text-align: center;
            line-height: 2rem;
        }
    }
}

.cards {
    display: flex;
    .card {
        border: thin solid rgba(0,0,0,.25);
        width: 280px;
        margin-right:1rem;
        border-radius: 10px 10px 0 0;
        box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.25),
                              -4px 0px 10px rgba(0, 0, 0, 0.25);
    }
    
}

@media screen and (min-width: 600px) {
    .container {
        width: 80%;

        .section-header {
            display: flex;
            justify-content: space-between;
            height: 95vh;
        
            .section-img {
                width: 60%;
                animation: horizontal-slide 2s ease forwards,
                                  fade 2s  ease forwards;
            }
        
            .page-description {
                display: flex;
                flex-direction: column;
                justify-content: center;
        
                .page-title {
                    text-align: center;
                    color: $secondaryFont;
                    font-family: $Satisfy;
                    margin-bottom: 2rem;
                }
            }
        }
    }
}

@media screen and (min-width: 900px) {
    .container {
        width: 70%;
    }
}

@media screen and (min-width: 1440px) {
    .container {
        width: 70%;
    }
}

